[gd_scene load_steps=11 format=2]

[ext_resource path="res://objects/projectiles/bullets/EnemyBullets/BasicTargetEnemyBullets/TargetEnemyBombBullet.gd" type="Script" id=1]
[ext_resource path="res://Assets/Shoots/ballshoot.png" type="Texture" id=2]
[ext_resource path="res://objects/HitBox2D/HitBoxArea2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/Animations/AntecipationTargetAnimation/AntecipationTargetAnimation.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/Particles/BombParticle/BombParticle.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 30.0
height = 0.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 20.0
height = 0.0

[sub_resource type="Animation" id=4]
resource_name = "Explosion"
tracks/0/type = "value"
tracks/0/path = NodePath("HitBoxArea2D/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "instance_explosion_particle"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "SETUP"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HitBoxArea2D/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="TargetEnemyBombBullet" type="KinematicBody2D"]
modulate = Color( 1.3, 1.3, 1.3, 1 )
scale = Vector2( 1.03701, 1.03701 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )
explosion_particle_scene = ExtResource( 6 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
scale = Vector2( 0.321617, 0.321617 )
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
rotation = 1.57079
scale = Vector2( 0.377425, 0.371329 )
frames = SubResource( 2 )
playing = true

[node name="HitBoxArea2D" parent="." instance=ExtResource( 3 )]
scale = Vector2( 2.94642, 2.94642 )
damage = 10
max_number_of_hits = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxArea2D"]
shape = SubResource( 3 )
disabled = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "SETUP"
anims/Explosion = SubResource( 4 )
anims/SETUP = SubResource( 5 )

[node name="Particles2D" parent="." instance=ExtResource( 6 )]

[node name="AntecipationTargetAnimation" parent="." instance=ExtResource( 4 )]
modulate = Color( 1, 1, 1, 0.329412 )
scale = Vector2( 0.424376, 0.424376 )

[connection signal="hit_applied" from="HitBoxArea2D" to="." method="_on_HitBoxArea2D_hit_applied"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
